--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,5 +43,13 @@
   </script>
   {%- endif %}
 
+  <script src="https://utteranc.es/client.js"
+        repo="johnberzi.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
+
   
 </head>
