--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,9 +41,18 @@
     //DarkReader.enable();
     DarkReader.auto( {brightness: 100, contrast: 90, sepia: 10} );
   </script>
+
+   <script src="https://utteranc.es/client.js"
+        repo="JohnBerzi.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+  </script>
+  
   {%- endif %}
 
-
+ 
 
   
 </head>
