--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
 
    <script src="https://utteranc.es/client.js"
         repo="JohnBerzi.github.io"
-        issue-term="pathname"
+        issue-term="og:title"
         theme="github-dark"
         crossorigin="anonymous"
         async>
