--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,4 +27,13 @@ layout: default
   </div>
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+
+  <script src="https://utteranc.es/client.js"
+        repo="JohnBerzi.github.io"
+        issue-term="og:title"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+  </script>
+  
 </article>
