--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,13 +30,14 @@ layout: default
 
   
  {% if jekyll.environment == 'production' -%}
-  <script src="https://utteranc.es/client.js"
-        repo="JohnBerzi.github.io"
-        issue-term="og:title"
-        theme="github-dark"
-        crossorigin="anonymous"
-        async>
-  </script>
+   <script src="https://utteranc.es/client.js"
+            repo="johnberzi.github.io"
+            issue-term="og:title"
+            label="Comments"
+            theme="preferred-color-scheme"
+            crossorigin="anonymous"
+            async>
+    </script>
    {%- endif %}
   
 </article>
